syntax = "proto3";

package resources;

import "google/protobuf/struct.proto";

// Error message
message Error {
  string code = 1;
  string message = 2;
  map<string, string> details = 3;
}

// Resource message
message Resource {
  string id = 1;
  string type = 2;
  optional string ownerId = 3;
  optional string parentId = 4;
  string applicationKey = 5;
  repeated string sharedWith = 6;
  repeated string tags = 7;
  google.protobuf.Struct details = 8;
  optional int64 createdAt = 9;
  optional string createdBy = 10;
  optional int64 updatedAt = 11;
  optional string updatedBy = 12;
}

// GetResource request
message GetResourceRequest {
  string id = 1;
  string applicationKey = 2;
}

// GetResource response
message GetResourceResponse {
  Resource resource = 1;
}

// PutResource request
message PutResourceRequest {
  Resource resource = 1;
  bool force = 2;
}

// PutResource response
message PutResourceResponse {
}

// Resources service definition
service ResourcesService {
  rpc GetResource(GetResourceRequest) returns (GetResourceResponse);
  rpc PutResource(PutResourceRequest) returns (PutResourceResponse);
}
